src/parsers/snapshots/meshb__parsers__mail_parser__tests__end_section_parser_should_work.snap
---
source: src/mail_parser.rs
expression: "end_section_tag(\"FINSF\")"
---
Ok(
    (
        "",
        "FINSF",
    ),
)
