src/parsers/snapshots/meshb__parsers__mail_parser__tests__gma_section_nook.snap
---
source: src/parsers/mail_parser.rs
expression: "start_gma_section(\"GROUPMA\")"
---
Err(
    Error(
        Base {
            location: "GROUPMA",
            kind: Expected(
                Tag(
                    "GROUP_MA",
                ),
            ),
        },
    ),
)
