src/parsers/snapshots/meshb__parsers__mail_parser__tests__gma_section_ok.snap
---
source: src/parsers/mail_parser.rs
expression: "start_gma_section(\"GROUP_MA\")"
---
Ok(
    (
        "",
        Cell,
    ),
)
