src/parsers/snapshots/meshb__parsers__mail_parser__tests__gno_section_nook.snap
---
source: src/parsers/mail_parser.rs
expression: "start_gno_section(\"GROUPNO\")"
---
Err(
    Error(
        Base {
            location: "GROUPNO",
            kind: Expected(
                Tag(
                    "GROUP_NO",
                ),
            ),
        },
    ),
)
