src/parsers/snapshots/meshb__parsers__mail_parser__tests__gno_section_ok.snap
---
source: src/parsers/mail_parser.rs
expression: "start_gno_section(\"GROUP_NO\")"
---
Ok(
    (
        "",
        Node,
    ),
)
