src/parsers/snapshots/meshb__parsers__mail_parser__tests__group_name_no_5.snap
---
source: src/parsers/mail_parser.rs
expression: "group_name(\"GOP2 d\")"
---
Ok(
    (
        " d",
        "GOP2",
    ),
)
