src/parsers/snapshots/meshb__parsers__mail_parser__tests__group_name_nook_1.snap
---
source: src/parsers/mail_parser.rs
expression: "group_name(\"-a1a_Aaaa\")"
---
Err(
    Error(
        Base {
            location: "-a1a_Aaaa",
            kind: Expected(
                Alpha,
            ),
        },
    ),
)
