src/parsers/snapshots/meshb__parsers__mail_parser__tests__group_name_nook_2.snap
---
source: src/parsers/mail_parser.rs
expression: "group_name(\"1a_Aaaa\")"
---
Err(
    Error(
        Base {
            location: "1a_Aaaa",
            kind: Expected(
                Alpha,
            ),
        },
    ),
)
