src/parsers/snapshots/meshb__parsers__mail_parser__tests__group_name_ok_1.snap
---
source: src/parsers/mail_parser.rs
expression: "group_name(\"GOP1\")"
---
Ok(
    (
        "",
        "GOP1",
    ),
)
