src/parsers/snapshots/meshb__parsers__mail_parser__tests__group_name_ok_2.snap
---
source: src/parsers/mail_parser.rs
expression: "group_name(\"aaaaaaa\")"
---
Ok(
    (
        "",
        "aaaaaaa",
    ),
)
