src/parsers/snapshots/meshb__parsers__mail_parser__tests__group_name_ok_4.snap
---
source: src/parsers/mail_parser.rs
expression: "group_name(\"aa1a_Aaaa\")"
---
Ok(
    (
        "",
        "aa1a_Aaaa",
    ),
)
